# Rtesseract

./: .Rbuildignore  .gitignore  Changelog  DESCRIPTION  INSTALL.md  INSTALL.windows  InstallingTesseract.md  Installing_Rtesseract.md  NAMESPACE  Note  README  README.md  TODO  TODO.md  TODO.win  alts.R  cleanup  conf.R  config.R.win  configure  configure.ac  configure.win  createSamplePNG.R  findLines_notes  imageCapabilities.R.win  lines.R  lines2.R  readImg.cpp  sampleImage.pnm  sampleImage.ps  sampleImage.spix
Experiments/: bad_config  exit.R  lines.R  pdf.R  pdf1.R  plot-wrong.R  plot2.R  riFree.R  vars.R
R/: AclassesEnums.R  AutogenClasses.R  IFF.R  OCRDocument.R  OCRResults.R  PageSegMode.R  Rrender.R  call.R  classes.R  compareWords.R  config.R.in  convertPDF.R  deskew.R  exit.R  ext.R  getFontInfo.R  imageCapabilities.R.in  imageFuns.R  leptonica.R  leptonicaLines.R  lstm.R  misc.R  mkPages.R  ocr.R  onAttach.R  pdf2png.R  pix.R  pixEnums.R  pixRead.R  plot.R  plotPix.R  readBox.R  selfCorrect.R  svg.R  tables.R  toPDF.R  version.R  z_enumDefs_3.05.R  z_enumDefs_4.0.R  z_enumDefs_5.1.R  (+2 more)
TU/: .#tu.R  compareCurrent.R  lept.R  leptonica.cc  tess.cc  tu.R
inst/: sampleConfigFile
inst/Paper/: Additions.md  Makefile  RJwrapper.Rnw  Rtesseract.Rnw  Rtesseract.bib  Suggestions  comparison.Rnw  getImage.R  rotateZoom.R  rotateZoom.Rnw  setRectangle.R  transpose.R
inst/caseStudies/: IMG_1234_crop.R  IMG_1234_crop.txt  IMG_1236_crop.R  IMG_1236_crop.txt  IMG_1255_crop.R  IMG_1255_crop.txt  ToExplore  cropBoxes.R
inst/images/: DifferentFonts.tiff  GoogleBooksOCR.tiff  IMG_1234_crop.tiff  OCRSample.tiff  OCRSample2.tiff  debug.R  explore.R  readPlot.R  scatter.R
inst/trainingSample/: 1990_p44.txt  eng.tables.ex0.box  train.R  train_duncan.R
inst/vignettes/: highlight.Rmd  highlight.md  lineDetection.Rmd
man/: BoundingBox.Rd  BoundingBox.Rd-old  GetBoxes.Rd  GetCharWidth.Rd  GetConfidenceColors.Rd  GetFontInfo.Rd  GetImageInfo.Rd  GetIterator.Rd  GetSmudges.Rd  GetText.Rd  IFF_PNG.Rd  PageIteratorLevel-class.Rd  PageIteratorLevel.Rd  PrintVariables.Rd  ReadConfigFile.Rd  SetInputName.Rd  SetOutputName.Rd  SetPageSegMode.Rd  SetRectangle.Rd  SetSourceResolution.Rd  bboxToDF.Rd  compareWord.Rd  deskew.Rd  enums.Rd  getAvailableLanguages.Rd  getBoxes.Rd  getCharWidth.Rd  getImageInfo.Rd  getLines.Rd  getSmudges.Rd  lapply.Rd  leptonicaImageFormats.Rd  leptonicaVersion.Rd  ocr.Rd  opaqueClassses.Rd  pixAddGray.Rd  pixAnd.Rd  pixGetPixels.Rd  pixRead.Rd  pixRotate.Rd  (+11 more)
man/Old/: ocr.Rd
src/: Makevars  Makevars.in  Makevars.win  PageSegMode.cc  RConverters.cc  RConverters.h  Rtesseract.h  RtesseractBoxRenderer.cc  RtesseractBoxRenderer.h  confidence.cpp  exit.cpp  ext.cpp  lept.cc  leptLines.cc  lstm.cc  main.cpp  pix.cc  pixa.cc  render.cpp  version.cpp
src/Rexit/: Makefile  exit.c
testRexit/: Makevars.in
tests/: 1990.R  ProcessPages.R  alternatives.R  alternatives1.R  apiPix.R  basic.R  config.R  connectGap.R  cube.R  datapath.R  debug_config  debug_config.R  detectOS.R  eg.R  err.R  err1.R  flip.R  gc.R  gc2.R  gcGetImage.R  gcGetImage2.R  gcGetImage3.R  gcPix.R  getImg.R  imageFormats.R  lang.R  lineSegments.R  lines.R  multiTiff.R  path.R  pix.R  pix1.R  pixCopy.R  pixFormat.R  pixPlot.R  pixRGBPixels.R  pixSetSubset.R  pixSubset.R  pixZero.R  pix_gc.R  (+19 more)
